# liskov-self-custody-signer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/liskov-self-custody-proto/: Cargo.toml
crates/liskov-self-custody-proto/src/: lib.rs
crates/liskov-self-custody-signer/: Cargo.toml
crates/liskov-self-custody-signer/src/: lib.rs  main.rs
