[workspace]
members = [
    "crates/liskov-self-custody-proto",
    "crates/liskov-self-custody-signer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.78"
repository = "https://github.com/proof-computer/liskov-self-custody-signer"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
