[workspace]
members = [
    "crates/liskov-self-custody-proto",
    "crates/liskov-self-custody-signer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.78"
repository = "https://github.com/proof-computer/liskov-self-custody-signer"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.31"
subxt = { version = "0.38.1", features = ["reconnecting-rpc-client"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
schnorrkel = "0.11.5"
blake2 = "0.10.6"
bs58 = "0.5.1"
hex = "0.4.3"
sha2 = "0.10.9"
getrandom = "0.2.16"
url = "2.5.4"
async-trait = "0.1.88"
zeroize = "1.8.1"
tempfile = "3.20.0"
