[package]
name = "liskov-self-custody-signer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Placeholder daemon binary for the Liskov self-custody signer."

[dependencies]
clap.workspace = true
liskov-self-custody-proto = { path = "../liskov-self-custody-proto" }

[dev-dependencies]
clap.workspace = true
